--- a/PracticeFour.html
+++ b/PracticeFour.html
@@ -23,5 +23,9 @@
         <button type="submit">Generate Table</button>
     </form>
 
+    <footer class="footer">
+        <p>&copy; 2024 PHP Multiplication Table</p>
+    </footer>
+
 </body>
 </html>
