--- a/PracticeThree.html
+++ b/PracticeThree.html
@@ -37,5 +37,9 @@
             }
         }
     </script>
+
+    <footer class="footer">
+        <p>&copy; 2024 JavaScript Password Verification</p>
+    </footer>
 </body>
 </html>
