--- a/PracticeTwo.html
+++ b/PracticeTwo.html
@@ -38,5 +38,9 @@
             content.style.borderWidth = borderWidth + 'px';
         });
     </script>
+
+    <footer class="footer">
+        <p>&copy; 2024 CSS Font Control</p>
+    </footer>
 </body>
 </html>
