--- a/PracticeOne.html
+++ b/PracticeOne.html
@@ -31,5 +31,9 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mgjZ46mt8JE?t=94s" frameborder="0" allowfullscreen></iframe>
 
+    <footer class="footer">
+        <p>&copy; 2024 HTML EECS Profiles</p>
+    </footer>
+
 </body>
 </html>
